// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coyote-test 1`] = `
Array [
  "Canis_lupus (AF115699) / Canis_lupus (AF115699)",
  "Canis_lupus (AF115700) / Canis_lupus (AF115700)",
  "Canis_lupus (AF115701) / Canis_lupus (AF115701)",
  "Canis_latrans (EU400577) / Canis_latrans (EU400577)",
  "Canis_latrans (EU400578) / Canis_latrans (EU400578)",
]
`;

exports[`emydura 1`] = `
Array [
  "Emydura subglobosa (KC692462) / Emydura subglobosa (KC692462)",
  "Emydura subglobosa (NC_026048) / Emydura subglobosa (NC_026048)",
  "Emydura subglobosa (KC755184) / Emydura subglobosa (KC755184)",
]
`;

exports[`emydura-short 1`] = `
Array [
  "Emydura subglobosa (KC755184) / Emydura subglobosa (KC755184)",
]
`;

exports[`kino 1`] = `
Array [
  "Kinosternon scorpioides (KF301385) / Kinosternon scorpioides (KF301385)",
  "Kinosternon subrubrum (KF301391) / Kinosternon subrubrum (KF301391)",
  "Kinosternon subrubrum (KF301390) / Kinosternon subrubrum (KF301390)",
  "Sternotherus minor (KF301364) / Sternotherus minor (KF301364)",
]
`;

exports[`plaamyd 1`] = `
Array [
  "Amyda cartilaginea (LM537480) / Amyda cartilaginea (LM537480)",
  "Amyda cartilaginea (LM537481) / Amyda cartilaginea (LM537481)",
  "Amyda cartilaginea (LM537466) / Amyda cartilaginea (LM537466)",
  "Amyda cartilaginea (LM537485) / Amyda cartilaginea (LM537485)",
  "Amyda cartilaginea (LM537484) / Amyda cartilaginea (LM537484)",
  "Amyda cartilaginea (LM537483) / Amyda cartilaginea (LM537483)",
  "Amyda ornata (LM537482) / Amyda ornata (LM537482)",
  "Amyda ornata (LM537490) / Amyda ornata (LM537490)",
  "Amyda ornata (LM537462) / Amyda ornata (LM537462)",
  "Amyda cartilaginea (LM537464) / Amyda cartilaginea (LM537464)",
  "Amyda cartilaginea (LM537463) / Amyda cartilaginea (LM537463)",
  "Amyda cartilaginea (AY259550) / Amyda cartilaginea (AY259550)",
  "Amyda cartilaginea (JN232534) / Amyda cartilaginea (JN232534)",
  "Amyda cartilaginea (LM537465) / Amyda cartilaginea (LM537465)",
  "Amyda cartilaginea (LM537467) / Amyda cartilaginea (LM537467)",
  "Amyda ornata (LM537478) / Amyda ornata (LM537478)",
  "Amyda cartilaginea (LM537491) / Amyda cartilaginea (LM537491)",
  "Amyda cartilaginea (LM537492) / Amyda cartilaginea (LM537492)",
  "Amyda cartilaginea (LM537476) / Amyda cartilaginea (LM537476)",
  "Amyda cartilaginea (LM537493) / Amyda cartilaginea (LM537493)",
  "Amyda cartilaginea (LM537494) / Amyda cartilaginea (LM537494)",
  "Palea steindachneri (AY743417) / Palea steindachneri (AY743417)",
]
`;

exports[`smallerlepus 1`] = `
Array [
  "Lepus mandshuricus (HM232991) / Lepus mandshuricus (HM232991)",
  "Lepus mandshuricus (HM232995) / Lepus mandshuricus (HM232995)",
  "Lepus mandshuricus (HM232996) / Lepus mandshuricus (HM232996)",
  "Lepus mandshuricus (HM232994) / Lepus mandshuricus (HM232994)",
  "Lepus mandshuricus (HM232993) / Lepus mandshuricus (HM232993)",
  "Lepus mandshuricus (HM232992) / Lepus mandshuricus (HM232992)",
  "Lepus timidus (AB687528) / Lepus timidus (AB687528)",
  "Lepus timidus (AB687529) / Lepus timidus (AB687529)",
  "Lepus timidus (AB687530) / Lepus timidus (AB687530)",
  "Lepus timidus (AB687527) / Lepus timidus (AB687527)",
  "Lepus timidus (AB687526) / Lepus timidus (AB687526)",
  "Lepus timidus (AB687525) / Lepus timidus (AB687525)",
  "Lepus timidus (AB687524) / Lepus timidus (AB687524)",
  "Lepus timidus (AB058607) / Lepus timidus (AB058607)",
  "Lepus mandshuricus (HM233077) / Lepus mandshuricus (HM233077)",
  "Lepus mandshuricus (HM233088) / Lepus mandshuricus (HM233088)",
  "Lepus mandshuricus (HM233090) / Lepus mandshuricus (HM233090)",
  "Lepus mandshuricus (HM233091) / Lepus mandshuricus (HM233091)",
  "Lepus mandshuricus (HM233089) / Lepus mandshuricus (HM233089)",
  "Lepus mandshuricus (HM233010) / Lepus mandshuricus (HM233010)",
  "Lepus mandshuricus (HM233011) / Lepus mandshuricus (HM233011)",
  "Lepus mandshuricus (HM233014) / Lepus mandshuricus (HM233014)",
]
`;

exports[`trio171sequence 1`] = `
Array [
  "Amyda cartilaginea (LM537480) / Amyda cartilaginea (LM537480)",
  "Amyda cartilaginea (LM537481) / Amyda cartilaginea (LM537481)",
  "Amyda cartilaginea (LM537485) / Amyda cartilaginea (LM537485)",
  "Amyda cartilaginea (LM537484) / Amyda cartilaginea (LM537484)",
  "Amyda cartilaginea (LM537483) / Amyda cartilaginea (LM537483)",
  "Amyda ornata (LM537482) / Amyda ornata (LM537482)",
  "Amyda ornata (LM537490) / Amyda ornata (LM537490)",
  "Amyda ornata (LM537462) / Amyda ornata (LM537462)",
  "Amyda cartilaginea (LM537464) / Amyda cartilaginea (LM537464)",
  "Amyda cartilaginea (LM537463) / Amyda cartilaginea (LM537463)",
  "Amyda cartilaginea (AY259550) / Amyda cartilaginea (AY259550)",
  "Amyda cartilaginea (JN232534) / Amyda cartilaginea (JN232534)",
  "Amyda cartilaginea (LM537465) / Amyda cartilaginea (LM537465)",
  "Amyda cartilaginea (LM537467) / Amyda cartilaginea (LM537467)",
  "Amyda cartilaginea (LM537466) / Amyda cartilaginea (LM537466)",
  "Amyda ornata (LM537478) / Amyda ornata (LM537478)",
  "Amyda cartilaginea (LM537491) / Amyda cartilaginea (LM537491)",
  "Amyda cartilaginea (LM537492) / Amyda cartilaginea (LM537492)",
  "Amyda cartilaginea (LM537476) / Amyda cartilaginea (LM537476)",
  "Amyda cartilaginea (LM537493) / Amyda cartilaginea (LM537493)",
  "Amyda cartilaginea (LM537494) / Amyda cartilaginea (LM537494)",
  "Palea steindachneri (AY743417) / Palea steindachneri (AY743417)",
]
`;

exports[`trionychcytb 1`] = `
Array [
  "Amyda cartilaginea (LM537481) / Amyda cartilaginea (LM537481)",
  "Amyda cartilaginea (LM537480) / Amyda cartilaginea (LM537480)",
  "Amyda ornata (LM537462) / Amyda ornata (LM537462)",
  "Amyda cartilaginea (LM537463) / Amyda cartilaginea (LM537463)",
  "Amyda cartilaginea (LM537464) / Amyda cartilaginea (LM537464)",
  "Amyda cartilaginea (LM537483) / Amyda cartilaginea (LM537483)",
  "Amyda cartilaginea (LM537484) / Amyda cartilaginea (LM537484)",
  "Amyda cartilaginea (LM537485) / Amyda cartilaginea (LM537485)",
  "Amyda ornata (LM537490) / Amyda ornata (LM537490)",
  "Amyda ornata (LM537482) / Amyda ornata (LM537482)",
  "Amyda ornata (LM537478) / Amyda ornata (LM537478)",
  "Amyda cartilaginea (LM537467) / Amyda cartilaginea (LM537467)",
  "Amyda cartilaginea (LM537465) / Amyda cartilaginea (LM537465)",
  "Amyda cartilaginea (JN232534) / Amyda cartilaginea (JN232534)",
  "Amyda cartilaginea (AY259550) / Amyda cartilaginea (AY259550)",
  "Amyda cartilaginea (LM537466) / Amyda cartilaginea (LM537466)",
  "Amyda cartilaginea (LM537492) / Amyda cartilaginea (LM537492)",
  "Amyda cartilaginea (LM537491) / Amyda cartilaginea (LM537491)",
  "Amyda cartilaginea (LM537494) / Amyda cartilaginea (LM537494)",
  "Amyda cartilaginea (LM537493) / Amyda cartilaginea (LM537493)",
  "Amyda cartilaginea (LM537476) / Amyda cartilaginea (LM537476)",
  "Pelodiscus sinensis (AY583692) / Pelodiscus sinensis (AY583692)",
  "Pelodiscus sinensis (AY259553) / Pelodiscus sinensis (AY259553)",
  "Palea steindachneri (AY743417) / Palea steindachneri (AY743417)",
  "Palea steindachneri (AY259552) / Palea steindachneri (AY259552)",
]
`;
